--- a/scan/templates/scan/_script_head.html
+++ b/scan/templates/scan/_script_head.html
@@ -1,2 +1,2 @@
 {% load staticfiles %}
-<script scr="{% static 'js/jquery-3.2.1.js' %}"></script>
+<script scr="{% static 'js/jquery-1.11.1.min.js' %}" type="text/javascript"></script>
