--- a/scan/templates/scan/base.html
+++ b/scan/templates/scan/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     {% include 'scan/_css_head.html' %}
-    {% include 'scan/_script_head.html' %}
+{#    {% include 'scan/_script_head.html' %}#}
     <title>{% block title %}Index{% endblock %}</title>
 </head>
 <body>
@@ -45,6 +45,7 @@
     <script>
 
     </script>
+    <script scr="{% static 'js/jquery-1.11.1.min.js' %}"></script>
     {% include 'scan/_script_body.html' %}
 </body>
 </html>
