add api urls and angular for urls;

--- a/scan/templates/scan/_script_body.html
+++ b/scan/templates/scan/_script_body.html
@@ -1,2 +1,4 @@
 {% load staticfiles %}
 <script src="{% static 'js/script.js' %}"></script>
+<script src="{% static 'angular/service.js' %}"></script>
+<script src="{% static 'angular/controllers/indexCtrl.js' %}"></script>
