--- a/scan/templates/scan/_script_head.html
+++ b/scan/templates/scan/_script_head.html
@@ -1,2 +1,3 @@
 {% load staticfiles %}
-<script scr="{% static 'js/jquery-1.11.1.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/jquery-1.11.1.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/angular-1.4.6.min.js' %}" type="text/javascript"></script>
