--- a/static/css/common.css
+++ b/static/css/common.css
@@ -101,3 +101,24 @@ body {
 #djShowToolBarButton{
     display: none !important;
 }
+@keyframes loading {
+    0% {height: 8px;}
+    50% {height: 13px}
+    100% {height: 8px;}
+}
+td > span.loading-icon > i {
+    display: inline-block;
+    width: 3px;
+    height: 8px;
+    background-color: #4997b1;
+    /*vertical-align: middle;*/
+    margin-right: 2px;
+    animation: 1s loading infinite;
+}
+td > span.loading-icon > i:nth-child(2) {
+    animation: 1s .2s loading infinite;
+}
+td > span.loading-icon > i:nth-child(3) {
+    animation: 1s .4s loading infinite;
+    margin-right:10px;
+}
